--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "@types/nodemailer": "^6.4.17",
+    "aws-cdk": "2.1014.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.1014.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-ssm": "^3.810.0",
     "aws-cdk-lib": "2.194.0",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "nodemailer": "^7.0.3"
   }
 }
